force-app/main/default/objects/WorkOrder/fields/Isolation_Required__c.field-meta.xml
<CustomField>
    <fullName>Isolation_Required__c</fullName>
    <label>Isolation Required</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>