force-app/main/default/objects/WorkOrder/fields/Lockout_Tagout__c.field-meta.xml
<CustomField>
    <fullName>Lockout_Tagout__c</fullName>
    <label>Lockout Tagout</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>