force-app/main/default/objects/WorkOrder/fields/Permit_to_Work__c.field-meta.xml
<CustomField>
    <fullName>Permit_to_Work__c</fullName>
    <label>Permit to Work</label>
    <referenceTo>Permit_to_Work__c</referenceTo>
    <relationshipName>WorkOrder_Permit_to_Work</relationshipName>
    <type>Lookup</type>
</CustomField>