force-app/main/default/objects/WorkOrder/fields/Pipeline_Station__c.field-meta.xml
<CustomField>
    <fullName>Pipeline_Station__c</fullName>
    <label>Pipeline Station</label>
    <referenceTo>Pipeline_Station__c</referenceTo>
    <relationshipName>WorkOrder_Pipeline_Station</relationshipName>
    <type>Lookup</type>
</CustomField>