force-app/main/default/objects/WorkOrder/fields/Pump__c.field-meta.xml
<CustomField>
    <fullName>Pump__c</fullName>
    <label>Pump</label>
    <type>Lookup</type>
    <referenceTo>Asset</referenceTo>
    <relationshipName>WorkOrder_Pumps</relationshipName>
</CustomField>