force-app/main/default/objects/WorkOrder/recordTypes/Corrective.recordType-meta.xml
<RecordType>
    <fullName>Corrective</fullName>
    <label>Corrective</label>
    <active>true</active>
</RecordType>