force-app/main/default/objects/WorkOrder/recordTypes/Field_Service.recordType-meta.xml
<RecordType>
    <fullName>Field_Service</fullName>
    <label>Field Service</label>
    <active>true</active>
</RecordType>