force-app/main/default/objects/WorkOrder/recordTypes/Inspection_WO.recordType-meta.xml
<RecordType>
    <fullName>Inspection_WO</fullName>
    <label>Inspection</label>
    <active>true</active>
</RecordType>