force-app/main/default/objects/WorkOrder/recordTypes/Preventive_Maintenance.recordType-meta.xml
<RecordType>
    <fullName>Preventive_Maintenance</fullName>
    <label>Preventive Maintenance</label>
    <active>true</active>
</RecordType>